<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchvw"
        android:visible="true"
        android:title="@string/search"
        android:icon="@drawable/search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:clickable="true"/>

    <item
        android:id="@+id/cloud"
        android:visible="true"
        android:title="@string/cloud"
        android:icon="@drawable/sync_icn"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:clickable="true"/>

    <item
        android:id="@+id/profile"
        android:visible="true"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:clickable="true"/>

</menu>