<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/editbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="52dp"
        tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="11dp">

        <TextView
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:text="@string/tv_url"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edt_url"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="11dp"
            android:paddingLeft="10dp"
            android:background="#F5F7FB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_sitename"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"/>

        <EditText
            android:id="@+id/edt_sname"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="41dp"
            android:layout_marginTop="11dp"
            android:background="#F5F7FB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_folder"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"/>

        <Spinner
            android:id="@+id/edtspinner"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="11dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_username"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"/>

        <EditText
            android:id="@+id/edt_uname"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="11dp"
            android:background="#F5F7FB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_sitepw"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/passwordtoggle">

            <EditText
                android:id="@+id/edt_pw"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="11dp"
                android:background="#F5F7FB" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_notes"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"/>

        <EditText
            android:id="@+id/edt_notes"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="11dp"
            android:background="#F5F7FB"/>

    </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/upd"
            android:textSize="20sp"
            android:backgroundTint="#0E85FF" />

    </LinearLayout>



</RelativeLayout>
