<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/appbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="11dp">

        <TextView
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:text="@string/tv_url"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/dt_url"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:paddingStart="10dp"
            android:background="#F5F7FB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_sitename"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="26dp"/>

        <EditText
            android:id="@+id/dt_sname"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="16dp"
            android:background="#F5F7FB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_folder"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="26dp"/>

        <EditText
            android:id="@+id/dtspinner"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="16dp"
            android:background="#F5F7FB" />

        <!--        <Spinner-->
        <!--            android:id="@+id/dtspinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="41dp"-->
        <!--            android:layout_marginTop="16dp"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_username"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="26dp"/>

        <EditText
            android:id="@+id/dt_uname"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="16dp"
            android:background="#F5F7FB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_sitepw"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="26dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/passwordtoggle">

            <EditText
                android:id="@+id/dt_pw"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="10dp"
                android:background="#F5F7FB"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv_notes"
            android:textSize="22sp"
            android:textColor="#949CA5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="26dp"/>

        <EditText
            android:id="@+id/dt_notes"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:background="#F5F7FB"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
